@@ -9,6 +9,7 @@ Cobbler CHANGELOG
 - (BUGF) don't print traceback during certain SystemExits
 - (BUGF) --help now works more intuitively on odd command line usage
 - (BUGF) use pxesystem for systems, not pxeprofile
+- (FEAT) make Cheetah formatting errors contain help text for users
 
 - ??? - 1.1.0
 - devel branch
